2012-08-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8/cursor.rb: refactor OCI8::Cursor to simplify
	    C code.
	* ext/oci8/bind.c: add a private function OCI8::BindType::Base#get_data
	    and #set_data.
	* ext/oci8/attr.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c: delete
	    unused functions and a unused variable.

2012-08-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in, lib/oci8/cursor.rb, lib/oci8/oci8.rb:
	    move OCI8::Cursor from lib/oci8/oci8.rb to lib/oci8/cursor.rb.

2012-08-05  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb: Change the ruby type which corresponds to
	    Oracle object type's DATE field from DateTime to Time.
	* test/setup_test_object.sql, test/test_object.rb:
	    Fix github issue #17 reported by Yasuo Honda.

2012-07-31  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_datetime.rb: refactor test code by adding
	    global functions convert_to_time() and convert_to_datetime(),
	    which will be used by test_object.rb later.

2012-07-28  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_metadata.rb: fix a sequence test failure on Oracle 11gR2.
	    Fix github issue #18 reported by Yasuo Honda.

2012-07-28  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, test/test_oci8.rb: add OCI8::Cursor#statement.
	   See github issue #12 requested by timon.

2012-05-25  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_clob.rb: speed up clob tests 29 times.

2012-05-25  KUBO Takehiro  <kubo@jiubao.org>
	* test/setup_test_object.sql, test/test_all.rb, test/test_object.rb:
	   Add tests of the previous commit.

2012-05-25  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: Merge pull request #13 from timon/temp_lob at github.
	    If 's' is a temporary lob, use OCILobLocatorAssign instead.

2012-05-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, test/test_oci8.rb: add OCI8's class variables:
	    @@environment_handle and @@process_handle.

2012-05-20  KUBO Takehiro  <kubo@jiubao.org>